--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       display: flex;
     }
     nav ul li {
-      margin-left: 50px;
+      margin-right: 50px;
     }
     nav ul li a {
       color: white;
@@ -145,6 +145,11 @@
       }
       .menu-toggle {
         display: block;
+        font-size: 24px;
+        cursor: pointer;
+        position: absolute;
+        right: 50px;
+        top: 15px;
       }
       .card {
         flex-direction: column;
@@ -174,7 +179,6 @@
     <nav>
       <ul class="texto-destaque">
         <li><a href="#cardapio">Cardápio</a></li>
-        <li><a href="#imagens">Imagens</a></li>
         <li><a href="#sobre">Contato</a></li>
       </ul>
     </nav>
@@ -198,7 +202,6 @@
       <div class="card-content">
         <h4>1. BOLO DE CENOURA <span>R$ 15,00</span></h4>
         <p>Ingredientes: Açúcar, Cenoura, Farinha, Fermento, Óleo e Ovos</p>
-        <p><em>Massa leve e fofa</em></p>
       </div>
     </div>
 
@@ -207,7 +210,6 @@
       <div class="card-content">
         <h4>2. BOLO DE LARANJA <span>R$ 17,00</span></h4>
         <p>Ingredientes: Açúcar, Casca de Laranja, Farinha, Fermento, Óleo, Ovos e Suco de Laranja.</p>
-        <p><em>Uma combinação cremosa e elegante que derrete na boca. ✨</em></p>
       </div>
     </div>
 
@@ -216,7 +218,6 @@
       <div class="card-content">
         <h4>3. BOLO DE LIMÃO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Farinha, Fermento, Gelatina de Limão, Leite, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -225,7 +226,6 @@
       <div class="card-content">
         <h4>4. BOLO DE MILHO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Farinha, Farmento, Flocos de milho, Iogurte, Lata de milho, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -234,7 +234,6 @@
       <div class="card-content">
         <h4>5. BOLO DE MANDIOCA <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Côco ralado, Fermento, Leite, Leite de côco, Margarina, Massa de mandioca e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -243,7 +242,6 @@
       <div class="card-content">
         <h4>6. BOLO DE CHOCOLATE <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Água, Chocolate em pó, Farinha, Fermento, Leite, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -252,7 +250,6 @@
       <div class="card-content">
         <h4>7. BOLO DE PAMONHA <span>R$ 16,00</span></h4>
         <p>Ingredientes: Côco ralado, Espiga de milho, Fermento, Leite condensado, Leite de côco, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -261,7 +258,6 @@
       <div class="card-content">
         <h4>8. BANANA COM AVEIA <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Aveia fina, Bananas, Canela, Fermento, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -270,7 +266,6 @@
       <div class="card-content">
         <h4>9. BANANA CARAMELIZADA <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Canela, Farinha, Fermento, Leite, Óleo e Ovos - Calda: Açúcar e Água.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -279,7 +274,6 @@
       <div class="card-content">
         <h4>10. NINHO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Farinha, Fermento, Leite, Leite em pó, Margarina e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -288,7 +282,6 @@
       <div class="card-content">
         <h4>11. COCO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Côco ralado, Essência de côco, Farinha, Fermento, Leite, Óleo e Ovos - Calda: Água e Leite condensado.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -297,7 +290,6 @@
       <div class="card-content">
         <h4>12. BOLO DE FUBÁ <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Farinha, Fermento, Fúba, Goiabada, Leite, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -306,7 +298,6 @@
       <div class="card-content">
         <h4>13. CHURROS <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Canela, Farinha, Fermento, Leite, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -315,7 +306,6 @@
       <div class="card-content">
         <h4>14. CENOURA VEGANO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar demerara, Cenoura, Farinha de trigo, Fermento, Leite vegetal e Óleo de côco.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -324,7 +314,6 @@
       <div class="card-content">
         <h4>15. CHOCOLATE SEM GLUTEM E SEM LACTOSE <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar demerara, Água quente, Cacau em pó, Farinha de arroz, Fermento, Óleo, Ovos, Polvilho doce e Sal.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -333,7 +322,6 @@
       <div class="card-content">
         <h4>16. CENOURA SEM LACTOSE E SEM GULTEM <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Cenoura, Farinha de arroz, Fermento, Óleo, Ovos e Sal.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -342,7 +330,6 @@
       <div class="card-content">
         <h4>17. BOLO RED VELVET <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Baunilha, Chocolate em pó, Corante vermelho, Farinha, Leite, Óleo, Ovos e Vinagre branco.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -351,7 +338,6 @@
       <div class="card-content">
         <h4>18. FORMIGUEIRO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar, Baunilha, Farinha, Fermento, Granulado, Leite, Óleo e Ovos.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -360,7 +346,6 @@
       <div class="card-content">
         <h4>19. CHOCOLATE VEGANO <span>R$ 16,00</span></h4>
         <p>Ingredientes: Açúcar demerara, Bicarbonato de sódio, Cacau em pó, Essência de baunilha, Farinha de trigo, Fermento, Leite vegetal, Óleo de côco e Vinagre de maçãs.</p>
-        <p><em>Perfeito para os fãs do contraste entre creme e crocância. 🍪</em></p>
       </div>
     </div>
 
@@ -370,7 +355,6 @@
       <div class="card-content">
         <h4>20. PÃO DE LÓ (MASSA BRANCA) <span>R$ 18,00</span></h4>
         <p>Ingredientes: Açúcar, Água quente, Baunilha, Farinha, Fermento e Ovos.</p>
-        <p><em>Texturas incríveis em cada colherada: doce, crocante e tropical. 🥥</em></p>
       </div>
     </div>
 
@@ -379,7 +363,6 @@
       <div class="card-content">
         <h4>21. MASSA DE CHOCOLATE <span>R$ 17,50</span></h4>
         <p>Ingredientes: Açúcar, Água, Chocolate em pó, Farinha, Fermento, Leite, Óleo e Ovos.</p>
-        <p><em>Um toque brasileiro irresistível com sabor de infância. 🥜</em></p>
       </div>
     </div>
 
@@ -389,7 +372,6 @@
       <div class="card-content">
         <h4>22. BRIGADEIRO <span>R$ 20,00</span></h4>
         <p>Ingredientes: Chocolate em pó, Creme de leite, Glucose de milho, Granulado e Leite condensado.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -398,7 +380,6 @@
       <div class="card-content">
         <h4>23. NINHO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Creme de leite, Glucose de milho, Leite condensado e Leite em pó.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -407,7 +388,6 @@
       <div class="card-content">
         <h4>24. BEIJINHO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Creme de leite, Glucose de milho, Leite condensado e Côco ralado.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -416,7 +396,6 @@
       <div class="card-content">
         <h4>24. SURPRESA DE UVA <span>R$ 19,00</span></h4>
         <p>Ingredientes: Creme de leite, Leite condensado, Leite em pó e Uva.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -425,7 +404,6 @@
       <div class="card-content">
         <h4>25. BICHO DE PÉ <span>R$ 19,00</span></h4>
         <p>Ingredientes: Leite condensado, Açúcar, Gelatina de morango e Manteiga.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -435,7 +413,6 @@
       <div class="card-content">
         <h4>26. MOUSSE DE MARACUJÁ <span>R$ 20,00</span></h4>
         <p>Ingredientes: Chantilly, Polpa de maracujá, Suco em pó de maracujá e Leite condensado</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -444,7 +421,6 @@
       <div class="card-content">
         <h4>27. SENSAÇÃO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Chantilly, Suco em pó de morango, Leite condensado e Barra de chocolate em pedaços.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -453,7 +429,6 @@
       <div class="card-content">
         <h4>28. BRIGADEIRO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Leite condensado, Creme de leite e Chocolate em pó.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -462,7 +437,6 @@
       <div class="card-content">
         <h4>29. MOUSSE DE NINHO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Chantilly e Brigadeiro de ninho.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -471,7 +445,6 @@
       <div class="card-content">
         <h4>30. MOUSSE DE DOCE DE LEITE <span>R$ 19,00</span></h4>
         <p>Ingredientes: Chantilly e Doce de leite caseiro.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -480,7 +453,6 @@
       <div class="card-content">
         <h4>31. NINHO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Leite condensado, Creme de leite e Leite em pó.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -489,7 +461,6 @@
       <div class="card-content">
         <h4>32. MOUSSE DE CHOCOLATE <span>R$ 19,00</span></h4>
         <p>Ingredientes: Doce de leite, Chantilly e Chocolate em pó.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -498,7 +469,6 @@
       <div class="card-content">
         <h4>33. MOUSSE DE MORANGO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Chantilly, Suco em pó de morango e Bandeija de morango.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -507,7 +477,6 @@
       <div class="card-content">
         <h4>34. PRESTÍGIO <span>R$ 19,00</span></h4>
         <p>Ingredientes: Leite condensado, Creme de leite e Côco ralado.</p>
-        <p><em>Doce, sofisticada e marcante: uma joia do cardápio. 💎</em></p>
       </div>
     </div>
 
@@ -517,7 +486,6 @@
       <div class="card-content">
         <h4>35. PÃO DE LÓ (MASSA BRANCA) <span>R$ 20,00</span></h4>
         <p>Ingredientes: Farinha, Açúcar, Água quente, Ovos, Baunilha e Fermento.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -526,7 +494,6 @@
       <div class="card-content">
         <h4>36.  MASSA DE CHOCOLATE <span>R$ 20,00</span></h4>
         <p>Ingredientes: Farinha, Açúcar, Água, Ovos, Fermento, Leite, Óleo e Chocolate em pó.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -535,7 +502,6 @@
       <div class="card-content">
         <h4>37.  BOLO RED VELVET<span>R$ 20,00</span></h4>
         <p>Ingredientes: Farinha, Açúcar, Leite, Ovos, Vinagre branco, Baunilha, Chocolate em pó, Corante vermelho e Óleo.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -545,7 +511,6 @@
       <div class="card-content">
         <h4>38. BOLO DE MAÇA SEM GLÚTEN <span>R$ 20,00</span></h4>
         <p>Ingredientes: Maçã, Ovos, Tâmaras, Óleo de côco, Leite Vegetal(côco), Farinha de amêndoas, Canela, Fermento, Sal e Nozes picadas.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -554,7 +519,6 @@
       <div class="card-content">
         <h4>39. BOLO DE BANANA INTEGRAL <span>R$ 20,00</span></h4>
         <p>Ingredientes: Banana nanica, Ovos, Óleo de côco, Farinha de aveia - sem glúten, Farinha de amêndoas, Mel, Canela, Fermento e Nozes picadas .</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -563,7 +527,6 @@
       <div class="card-content">
         <h4>40.  BOLO DE CENOURA FITNESS<span>R$ 20,00</span></h4>
         <p>Ingredientes: Cenoura, Ovos, Leite vegetal(côco), Mel, Farinha de aveia sem glúten, Farinha de amêndoas, Fermento, Sal e Canela. - COBERTURA: Cacau em pó 100%, Leite vegetal(côco), Mel e Pasta de amendoim.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -572,7 +535,6 @@
       <div class="card-content">
         <h4>41.  BOLO DE CHOCOLATE FITNESS<span>R$ 20,00</span></h4>
         <p>Ingredientes: Ovos, Cacau em pó 100%, Farinha de aveia, Farinha de amêndoas, Mel, Leite vegetal(côco), Óleo de côco, Essência de baunilha, Fermento e Sal.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
       </div>
     </div>
 
@@ -581,14 +543,97 @@
       <div class="card-content">
         <h4>42.  BOLO DE NOZES FITNESS<span>R$ 20,00</span></h4>
         <p>Ingredientes: Ovos, Mel, Óleo de côco, Leite vegetal(côco), Farinha de amêndoas, Fermento, Nozes picadas, Sal, Canela e Essência de baunilha.</p>
-        <p><em>Luxo em forma de sobremesa: cremosidade e sofisticação. 🍫✨</em></p>
+      </div>
+    </div>
+
+     <h3 class="category-title" id="bebidas">Novidades</h3>
+    <div class="card">
+      <img src="imgs/Bebidas_Laranja.jpg" alt="Suco Laranja">
+      <div class="card-content">
+        <h4>43. SUCO DE LARANJA <span>300ml - R$ 12,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 13,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 15,00</span></h4>
+        <p><em>Refresque seu dia com a energia da fruta!</em></p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="imgs/Bebidas_Goiaba.jpg" alt="Suco Goiaba">
+      <div class="card-content">
+        <h4>44. SUCO DE GOIABA <span>300ml - R$ 10,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 10,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 12,00</span></h4>
+        <p><em>Sabor direto da natureza, geladinho como você merece.</em></p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="imgs/Bebidas_Maracuja.jpg" alt="Suco Maracujá">
+      <div class="card-content">
+        <h4>45. SUCO DE MARACUJÁ <span>300ml - R$ 11,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 12,50</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 16,50</span></h4>
+        <p><em>Feitos na hora, cheios de vitaminas e frescor.</em></p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="imgs/Bebidas_Abacaxi.jpg" alt="Suco Abacaxi">
+      <div class="card-content">
+        <h4>46. SUCO DE ABACAXI  <span>300ml - R$ 10,50</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 11,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>400ml - R$ 14,00</span></h4>
+        <p><em>Hidrate-se com leveza e frescor.</em></p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="imgs/Bebidas_CaféPuro.jpg" alt="Café Puro">
+      <div class="card-content">
+        <h4>46. CAFÉ PURO  <span>100ml - R$ 3,50</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>150ml - R$ 4,00</span></h4>
+        <p><em>A dose perfeita de energia para começar bem.</em></p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="imgs/Bebidas_CaféComLeite.jpg" alt="Café com Leite">
+      <div class="card-content">
+        <h4>46. CAFÉ COM LEITE  <span>100ml - R$ 4,00</span></h4>
+        <h4>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ <span>150ml - R$ 4,50</span></h4>
+        <p><em>Um abraço quentinho em forma de xícara.</em></p>
       </div>
     </div>
 
   </div>
 
   <footer id="sobre">
-    <p>Doceria Moo — Chocolatudos especiais para todos os gostos! 🐮💕</p>
+    <div class="footer-container">
+      <!-- Contato -->
+      <div class="footer-contato">
+        <h3>Contato</h3>
+        <p><i class="fas fa-envelope"></i> 
+          <a href="mailto:seuemail@exemplo.com"> seuemail@exemplo.com</a>
+        </p>
+        <p><i class="fas fa-phone"></i> 
+          <a href="tel:+5511999999999"> (11) 99999-9999</a>
+        </p>
+      </div>
+
+      <!-- Redes sociais -->
+      <div class="footer-redes">
+        <h3>Siga-nos</h3>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+
+    <!-- Copyright -->
+    <div class="footer-copy">
+      <p>&copy; 2025 - Seu Site. Todos os direitos reservados.</p>
+    </div>
   </footer>
 
   <script>
