--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
       </div>
     </div>
 
-     <h3 class="category-title" id="bebidas">Novidades</h3>
+     <h3 class="category-title" id="bebidas">Bebidas</h3>
     <div class="card">
       <img src="imgs/Bebidas_Laranja.jpg" alt="Suco Laranja">
       <div class="card-content">
@@ -646,3 +646,4 @@
   </script>
 </body>
 </html>
+
